--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 				<fieldset class="panel">
 					<h1>Frequency</h1>
 					<div class="row">
-						<div class="col-4 col-md-2 my-auto">
+						<div class="col-auto col-md-3 my-auto">
 							<div class="form-check">
 								<input type="radio" name="op$-freq-fixed" id="op$-freq-unfixed" class="form-check-input" checked>
 								<label for="op$-freq-unfixed">Multiple</label>
@@ -370,7 +370,7 @@
 						</div>
 					</div>
 					<div class="row form-group">
-						<div class="d-none d-md-block col-2"></div>
+						<div class="d-none d-md-block col-3"></div>
 						<div class="col-auto pl-md-0">
 							<div class="form-check small">
 								<input type="checkbox" id="op$-multiple-free" class="form-check-input">
@@ -379,18 +379,18 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-4 col-md-2"></div>
-						<div class="col-2 col-md-1 px-0 text-center">Octave</div>
-						<div class="col-2 text-center">Note</div>
+						<div class="col-4 col-md-3"></div>
+						<div class="col-3 col-md-1 px-0 text-center">Octave</div>
+						<div class="col-4 col-md-2 text-center">Note</div>
 					</div>
 					<div class="row form-group">
-						<div class="col-4 col-md-2 my-auto">
+						<div class="col-4 col-md-3 my-auto">
 							<div class="form-check">
 								<input type="radio" name="op$-freq-fixed" id="op$-freq-fixed" class="form-check-input">
 								<label for="op$-freq-fixed">Fixed</label>
 							</div>
 						</div>
-						<div class="col-2 col-md-1 px-0">
+						<div class="col-3 col-md-1 px-0">
 							<select class="form-control led-display w-fit" id="op$-block">
 								<option>0&nbsp;</option>
 								<option>1&nbsp;</option>
@@ -402,7 +402,7 @@
 								<option>7&nbsp;</option>
 							</select>
 						</div>
-						<div class="col-2">
+						<div class="col-4 col-md-2">
 							<input type="number" min="0" max="2047" value="1093" class="form-control led-display" id="op$-freq-num">
 						</div>
 					</div>
@@ -415,7 +415,7 @@
 						</label>
 					</div>
 					<div class="row">
-						<div class="col-12 col-md-6 mb-3 my-md-auto">
+						<div class="col-12 col-md-9 mb-3 my-md-auto">
 							<input type="range" min="0" max="3" value="0" class="form-control-range mt-1" id="op$-rate-scale-slider">
 						</div>
 						<div class="col-4 col-md-2">
@@ -428,6 +428,48 @@
 								<input type="checkbox" id="op$-rate-scale-free" class="form-check-input">
 								<label for="op$-rate-scale-free">Free Choice</label>
 							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-auto">
+							Attenuation
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-auto col-md-3 my-auto">
+							<div class="form-check">
+								<input type="radio" name="op$-velocity-sensitive" id="op$-not-velocity-sensitive" class="form-check-input" checked>
+								<label for="op$-not-velocity-sensitive">Fixed</label>
+							</div>
+						</div>
+						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
+							<input type="range" min="0" max="127" value="0" class="form-control-range mt-1" id="op$-attenuation-slider">
+						</div>
+						<div class="col-4 col-md-2">
+							<input type="number" min="-127" max="127" value="0" class="form-control led-display" id="op$-attenuation" disabled>
+						</div>
+					</div>
+					<div class="row form-group">
+						<div class="d-none d-md-block col-3"></div>
+						<div class="col-auto pl-md-0">
+							<div class="form-check small">
+								<input type="checkbox" id="op$-attenuation-free" class="form-check-input">
+								<label for="op$-multiple-free">Free Choice</label>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-auto col-md-3 my-auto">
+							<div class="form-check">
+								<input type="radio" name="op$-velocity-sensitive" id="op$-velocity-sensitive" class="form-check-input">
+								<label for="op$-velocity-sensitive">Velocity Sensitive</label>
+							</div>
+						</div>
+						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
+							<input type="range" min="0" max="127" value="0" class="form-control-range mt-1" id="op$-key-velocity-slider">
+						</div>
+						<div class="col-4 col-md-2">
+							<input type="number" min="0" max="127" value="0" class="form-control led-display" id="op$-key-velocity">
 						</div>
 					</div>
 				</fieldset>
