--- a/index.html
+++ b/index.html
@@ -128,13 +128,21 @@
 							<input type="radio" name="algorithm" value="6" id="algorithm-6" class="grayscale">
 						</div>
 						<label class="col-10 col-md-5 my-4" for="algorithm-6">
-							<img src="img/algorithm-6.png" alt="1&rarr;3">
+							<img src="img/algorithm-6.png" alt="1&rarr;2">
 						</label>
 						<div class="col-1 my-auto text-center">
 							<input type="radio" name="algorithm" value="7" id="algorithm-7" checked class="grayscale">
 						</div>
 						<label class="col-5 my-auto" for="algorithm-7">
 							<img src="img/algorithm-7.png" alt="1, 2, 3 &amp; 4" class="my-4">
+						</label>
+					</div>
+					<div class="row form-group">
+						<div class="col-2 col-md-1 my-auto text-center">
+							<input type="radio" name="algorithm" value="8" id="algorithm-8" class="grayscale">
+						</div>
+						<label class="col-10 col-md-5 my-4" for="algorithm-8">
+							<img src="img/algorithm-8.png" alt="1&rarr;2&rarr;3">
 						</label>
 					</div>
 					<div class="row">
@@ -223,7 +231,7 @@
 								<td class="operator-3"></td>
 								<td class="operator-4"></td>
 							</tr>
-							<tr>
+							<tr class="operator-3">
 								<th class="align-middle text-center px-0">3</th>
 								<td class="operator-1">
 									<input type="number" min="0" max="100" step="0.5" value="0" class="form-control led-display" id="modulation-1-3">
@@ -234,7 +242,7 @@
 								<td class="operator-3"></td>
 								<td class="operator-4"></td>
 							</tr>
-							<tr>
+							<tr class="operator-4">
 								<th class="align-middle text-center px-0">4</th>
 								<td class="operator-1">
 									<input type="number" min="0" max="100" step="0.5" value="0" class="form-control led-display" id="modulation-1-4">
