--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 								<td>
 									<input type="number" min="0" max="100" step="0.5" value="0" class="form-control led-display" id="modulation-1-2">
 								</td>
-								<td class="operator-2"></td>
+								<td></td>
 								<td class="operator-3"></td>
 								<td class="operator-4"></td>
 							</tr>
@@ -239,7 +239,9 @@
 								<td class="operator-2">
 									<input type="number" min="0" max="100" step="0.5" value="0" class="form-control led-display" id="modulation-2-3">
 								</td>
-								<td class="operator-3"></td>
+								<td>
+									<input type="number" min="0" max="100" step="0.5" value="0" class="form-control led-display" id="modulation-3-3">
+								</td>
 								<td class="operator-4"></td>
 							</tr>
 							<tr class="operator-4">
@@ -253,7 +255,7 @@
 								<td class="operator-3">
 									<input type="number" min="0" max="100" step="0.5" value="0" class="form-control led-display" id="modulation-3-4">
 								</td>
-								<td class="operator-4"></td>
+								<td></td>
 							</tr>
 							<tr>
 								<th class="align-middle text-center px-0">
