Add Algorithm 9 (Algorithm 6 renumbered)

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 						<label class="col-10 col-md-5 my-4" for="algorithm-6">
 							<img src="img/algorithm-6.png" alt="1&rarr;2">
 						</label>
-						<div class="col-1 my-auto text-center">
+						<div class="col-2 col-md-1 my-auto text-center">
 							<input type="radio" name="algorithm" value="7" id="algorithm-7" checked class="grayscale">
 						</div>
 						<label class="col-5 my-auto" for="algorithm-7">
@@ -143,6 +143,12 @@
 						</div>
 						<label class="col-10 col-md-5 my-4" for="algorithm-8">
 							<img src="img/algorithm-8.png" alt="1&rarr;2&rarr;3">
+						</label>
+						<div class="col-2 col-md-1 my-auto text-center">
+							<input type="radio" name="algorithm" value="9" id="algorithm-9" class="grayscale">
+						</div>
+						<label class="col-10 col-md-5 my-4" for="algorithm-9">
+							<img src="img/algorithm-9.png" alt="2&rarr;3">
 						</label>
 					</div>
 					<div class="row">
