--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 						</div>
 					</div>
 					<div class="row form-group">
-						<div class="col-auto col-md-3"></div>
+						<div class="d-none d-md-block col-3"></div>
 						<div class="col-auto pl-md-0">
 							<div class="form-check small">
 								<input type="checkbox" id="op$-rate-scale-free" class="form-check-input">
@@ -511,26 +511,21 @@
 							<div class="form-check">
 								<input type="radio" name="op$-velocity-sensitive" id="op$-not-velocity-sensitive" class="form-check-input" checked>
 								<label for="op$-not-velocity-sensitive" class="form-check-label">
-									Fixed Attenuation
+									Fixed Minimum Attenuation
 								</label>
 							</div>
 						</div>
 						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
 							<input type="range" min="0" max="127" value="0" class="form-control-range mt-1" id="op$-attenuation-slider">
-						</div>
-						<div class="col-4 col-md-2">
-							<input type="number" min="-127" max="127" value="0" class="form-control led-display" id="op$-attenuation" disabled>
-						</div>
-					</div>
-					<div class="row form-group">
-						<div class="d-none d-md-block col-3"></div>
-						<div class="col-auto pl-md-0">
-							<div class="form-check small">
+							<div class="form-check small mt-2">
 								<input type="checkbox" id="op$-attenuation-free" class="form-check-input">
 								<label for="op$-multiple-free" class="form-check-label">
 									Free Choice
 								</label>
 							</div>
+						</div>
+						<div class="col-4 col-md-2">
+							<input type="number" min="-127" max="127" value="0" class="form-control led-display" id="op$-attenuation" disabled>
 						</div>
 					</div>
 					<div class="row form-group">
@@ -558,6 +553,17 @@
 						</div>
 						<div class="col-4 col-md-2">
 							<input type="number" value="16" class="form-control led-display" id="op$-attack" disabled>
+						</div>
+					</div>
+					<div class="row form-group">
+						<label class="col-auto col-md-3 col-form-label" for="op$-decay-slider">
+							Decay Rate
+						</label>
+						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
+							<input type="range" min="0" max="31" value="0" class="form-control-range mt-1" id="op$-decay-slider">
+						</div>
+						<div class="col-4 col-md-2">
+							<input type="number" value="0" class="form-control led-display" id="op$-decay" disabled>
 						</div>
 					</div>
 				</fieldset>
