--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="row">
+					<div class="row form-group">
 						<div class="col-auto col-md-3 my-auto">
 							<div class="form-check">
 								<input type="radio" name="op$-velocity-sensitive" id="op$-not-velocity-sensitive" class="form-check-input" checked>
@@ -564,6 +564,28 @@
 						</div>
 						<div class="col-4 col-md-2">
 							<input type="number" value="0" class="form-control led-display" id="op$-decay" disabled>
+						</div>
+					</div>
+					<div class="row">
+						<label class="col-auto col-md-3 col-form-label" for="op$-sustain-slider">
+							Sustain Attenuation
+						</label>
+						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
+							<input type="range" min="0" max="16" value="0" class="form-control-range mt-1" id="op$-sustain-slider">
+						</div>
+						<div class="col-4 col-md-2">
+							<input type="number" min="0" max="16" step="0.1" value="0" class="form-control led-display" id="op$-sustain" disabled>
+						</div>
+					</div>
+					<div class="row form-group">
+						<div class="d-none d-md-block col-3"></div>
+						<div class="col-auto pl-md-0">
+							<div class="form-check small">
+								<input type="checkbox" id="op$-sustain-free" class="form-check-input">
+								<label for="op$-sustain-free" class="form-check-label">
+									Free Choice
+								</label>
+							</div>
 						</div>
 					</div>
 				</fieldset>
