--- a/index.html
+++ b/index.html
@@ -484,6 +484,12 @@
 				</fieldset>
 				<fieldset class="panel">
 					<h1>Volume Envelope</h1>
+					<div class="row form-group">
+						<div class="d-none d-md-block col-3"></div>
+						<div class="col-12 col-md-6 pl-md-0 text-center">
+
+						</div>
+					</div>
 					<div class="row">
 						<label class="col-auto col-md-3 col-form-label" for="op$-rate-scale-slider">
 							Rate Scaling
