--- a/index.html
+++ b/index.html
@@ -486,8 +486,8 @@
 					<h1>Volume Envelope</h1>
 					<div class="row form-group">
 						<div class="d-none d-md-block col-3"></div>
-						<div class="col-12 col-md-6 pl-md-0 text-center">
-
+						<div class="col-12 col-md-6" style="padding: 7px; background: black; border-radius: 4px">
+							<img src="img/adsr.svg" width="375" height="216" alt="ADSR envelope">
 						</div>
 					</div>
 					<div class="row">
@@ -517,7 +517,7 @@
 							<div class="form-check">
 								<input type="radio" name="op$-velocity-sensitive" id="op$-not-velocity-sensitive" class="form-check-input" checked>
 								<label for="op$-not-velocity-sensitive" class="form-check-label">
-									Fixed Minimum Attenuation
+									Fixed Minimum Attenuation <small>(L1)</small>
 								</label>
 							</div>
 						</div>
@@ -552,7 +552,7 @@
 					</div>
 					<div class="row form-group">
 						<label class="col-auto col-md-3 col-form-label" for="op$-attack-slider">
-							Attack Rate
+							Attack Rate <small>(R1)</small>
 						</label>
 						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
 							<input type="range" min="1" max="31" value="16" class="form-control-range mt-1" id="op$-attack-slider">
@@ -563,7 +563,7 @@
 					</div>
 					<div class="row form-group">
 						<label class="col-auto col-md-3 col-form-label" for="op$-decay-slider">
-							Decay Rate
+							Decay Rate <small>(R2)</small>
 						</label>
 						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
 							<input type="range" min="0" max="31" value="0" class="form-control-range mt-1" id="op$-decay-slider">
@@ -574,7 +574,7 @@
 					</div>
 					<div class="row">
 						<label class="col-auto col-md-3 col-form-label" for="op$-sustain-slider">
-							Sustain Attenuation
+							Sustain Attenuation <small>(L2)</small>
 						</label>
 						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
 							<input type="range" min="0" max="16" value="0" class="form-control-range mt-1" id="op$-sustain-slider">
@@ -596,7 +596,7 @@
 					</div>
 					<div class="row form-group">
 						<label class="col-auto col-md-3 col-form-label" for="op$-sustain-rate-slider">
-							Sustain Rate
+							Sustain Rate <small>(R3)</small>
 						</label>
 						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
 							<input type="range" min="0" max="31" value="0" class="form-control-range mt-1" id="op$-sustain-rate-slider">
