--- a/index.html
+++ b/index.html
@@ -316,6 +316,13 @@
 							</tr>
 						</table>
 					</div>
+					<div class="align-middle text-center">
+						<label class="my-0" for="overdrive">Overdrive</label>
+						<input type="number" min="0" value="3" step="0.1" class="form-control led-display mx-2 d-inline" id="overdrive" style="max-width: 74px">
+						<button type="button" class="btn btn-info" id="btn-normalize-levels">
+							Normalize
+						</button>
+					</div>
 				</fieldset>
 				<fieldset class="panel">
 					<h1>Effects</h1>
@@ -486,7 +493,7 @@
 					<h1>Volume Envelope</h1>
 					<div class="row form-group">
 						<div class="d-none d-md-block col-3"></div>
-						<div class="col-12 col-md-6" style="padding: 7px; background: black; border-radius: 4px">
+						<div class="col-12 col-md-6 text-center" style="padding: 7px; background: black; border-radius: 4px">
 							<img src="img/adsr.svg" width="375" height="216" alt="ADSR envelope">
 						</div>
 					</div>
@@ -603,6 +610,28 @@
 						</div>
 						<div class="col-4 col-md-2">
 							<input type="number" value="0" class="form-control led-display" id="op$-sustain-rate" disabled>
+						</div>
+					</div>
+					<div class="row">
+						<label class="col-auto col-md-3 col-form-label" for="op$-release-slider">
+							Release <small>(R4)</small>
+						</label>
+						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
+							<input type="range" min="0" max="15" value="8" class="form-control-range mt-1" id="op$-release-slider">
+						</div>
+						<div class="col-4 col-md-2">
+							<input type="number" value="8" class="form-control led-display" id="op$-release" disabled>
+						</div>
+					</div>
+					<div class="row form-group">
+						<div class="d-none d-md-block col-3"></div>
+						<div class="col-auto pl-md-0">
+							<div class="form-check small">
+								<input type="checkbox" id="op$-release-free" class="form-check-input">
+								<label for="op$-release-free" class="form-check-label">
+									Free Choice
+								</label>
+							</div>
 						</div>
 					</div>
 				</fieldset>
