--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 						</label>
 					</div>
 					<div class="row">
-						<div class="col-12 col-md-6 mb-3 my-md-auto">
+						<div class="col-12 col-md-9 mb-3 my-md-auto">
 							<input type="range" min="0" max="7" value="0" class="form-control-range mt-1" id="vibrato-slider">
 						</div>
 						<div class="col-6 col-md-3">
@@ -360,12 +360,30 @@
 						</label>
 					</div>
 					<div class="row form-group">
-						<div class="col-12 col-md-6 mb-3 my-md-auto">
+						<div class="col-12 col-md-9 mb-3 my-md-auto">
 							<input type="range" min="0" max="10.7" value="0" step="0.1" class="form-control-range mt-1" id="lfo-delay-slider">
 						</div>
 						<div class="col-6 col-md-3">
 							<div class="input-group">
 								<input type="number" min="0" max="99.9" step="0.1" value="0" class="form-control led-display" id="lfo-delay">
+								<div class="input-group-append">
+									<span class="input-group-text led-label">seconds</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<label class="col-auto" for="lfo-attack-slider">
+							LFO Attack
+						</label>
+					</div>
+					<div class="row form-group">
+						<div class="col-12 col-md-9 mb-3 my-md-auto">
+							<input type="range" min="0" max="10.7" value="0" step="0.1" class="form-control-range mt-1" id="lfo-attack-slider">
+						</div>
+						<div class="col-6 col-md-3">
+							<div class="input-group">
+								<input type="number" min="0" max="99.9" step="0.1" value="0" class="form-control led-display" id="lfo-attack">
 								<div class="input-group-append">
 									<span class="input-group-text led-label">seconds</span>
 								</div>
