LFO envelope shapes.

--- a/index.html
+++ b/index.html
@@ -373,17 +373,17 @@
 						</div>
 					</div>
 					<div class="row">
-						<label class="col-auto" for="lfo-attack-slider">
+						<label class="col-auto" for="lfo-fade-slider">
 							LFO Attack
 						</label>
 					</div>
 					<div class="row form-group">
 						<div class="col-12 col-md-9 mb-3 my-md-auto">
-							<input type="range" min="0" max="10.7" value="0" step="0.1" class="form-control-range mt-1" id="lfo-attack-slider">
+							<input type="range" min="0" max="10.7" value="0" step="0.1" class="form-control-range mt-1" id="lfo-fade-slider">
 						</div>
 						<div class="col-6 col-md-3">
 							<div class="input-group">
-								<input type="number" min="0" max="99.9" step="0.1" value="0" class="form-control led-display" id="lfo-attack">
+								<input type="number" min="0" max="99.9" step="0.1" value="0" class="form-control led-display" id="lfo-fade">
 								<div class="input-group-append">
 									<span class="input-group-text led-label">seconds</span>
 								</div>
