Change to a separate LFO per channel.

--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
 				<fieldset class="panel">
 					<h1>LFO</h1>
 					<div class="row">
-						<label class="col-auto" for="lfo-frequency-slider">
+						<label class="col-auto" for="lfo-rate-slider">
 							Frequency
 						</label>
 					</div>
 					<div class="row mb-md-2">
 						<div class="col-12 col-md-6 mb-3 my-md-auto">
-							<input type="range" min="0" max="6" value="0" class="form-control-range mt-1" id="lfo-frequency-slider">
+							<input type="range" min="0" max="6" value="0" class="form-control-range mt-1" id="lfo-rate-slider">
 						</div>
 						<div class="col-6 col-md-3 mb-3 mb-md-0">
 							<div class="input-group">
-								<input type="number" min="0" max="99.9" step="0.2" value="0" class="form-control led-display" id="lfo-frequency" disabled>
+								<input type="number" min="0" max="99.9" step="0.2" value="0" class="form-control led-display" id="lfo-rate" disabled>
 								<div class="input-group-append">
 									<span class="input-group-text led-label">Hz</span>
 								</div>
@@ -57,8 +57,8 @@
 						</div>
 						<div class="col-auto">
 							<div class="form-check small">
-								<input type="checkbox" id="lfo-frequency-free" class="form-check-input">
-								<label for="lfo-frequency-free" class="form-check-label">
+								<input type="checkbox" id="lfo-rate-free" class="form-check-input">
+								<label for="lfo-rate-free" class="form-check-label">
 									Free Choice
 								</label>
 							</div>
