--- a/index.html
+++ b/index.html
@@ -406,6 +406,7 @@
 						<div class="col-auto pl-md-0">
 							<button class="btn btn-dark dropdown-toggle rounded-0" type="button" id="btn-op$-waveform" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<img src="img/wave-sine.webp" width="200" height="32" alt="Waveform">
+								<span class="btn-led"></span>
 							</button>
 							<div class="dropdown-menu p-0" aria-labelled-by="btn-op$-waveform">
 								<div id="op$-waveform" class="container btn-group-toggle w-100 p-0" data-toggle="buttons">
@@ -444,6 +445,50 @@
 									<label class="btn btn-dark rounded-0 w-100">
 										<input type="radio" name="op$-waveform" value="8">
 										<img src="img/wave-triangle.webp" width="200" height="32" alt="Triangle">
+									</label>
+									<label class="btn btn-dark rounded-0 w-100 btn-led">
+										<input type="radio" name="op$-waveform" value="9">
+										Sawtooth 1+2
+									</label>
+									<label class="btn btn-dark rounded-0 w-100 btn-led">
+										<input type="radio" name="op$-waveform" value="10">
+										Square 1+2
+									</label>
+									<label class="btn btn-dark rounded-0 w-100 btn-led">
+										<input type="radio" name="op$-waveform" value="11">
+										Triangle 1+2
+									</label>
+									<label class="btn btn-dark rounded-0 w-100 btn-led">
+										<input type="radio" name="op$-waveform" value="12">
+										Sine 1+2+3+4
+									</label>
+									<label class="btn btn-dark rounded-0 w-100 btn-led">
+										<input type="radio" name="op$-waveform" value="13">
+										Sine 1+2
+									</label>
+									<label class="btn btn-dark rounded-0 w-100 btn-led">
+										<input type="radio" name="op$-waveform" value="14">
+										Sine 1+3
+									</label>
+									<label class="btn btn-dark rounded-0 w-100 btn-led">
+										<input type="radio" name="op$-waveform" value="15">
+										Sine 1+4
+									</label>
+									<label class="btn btn-dark rounded-0 w-100 btn-led">
+										<input type="radio" name="op$-waveform" value="16">
+										Sine 1+5
+									</label>
+									<label class="btn btn-dark rounded-0 w-100 btn-led">
+										<input type="radio" name="op$-waveform" value="17">
+										Sine 1+6
+									</label>
+									<label class="btn btn-dark rounded-0 w-100 btn-led">
+										<input type="radio" name="op$-waveform" value="18">
+										Sine 1+7
+									</label>
+									<label class="btn btn-dark rounded-0 w-100 btn-led">
+										<input type="radio" name="op$-waveform" value="19">
+										Sine 1+8
 									</label>
 								</div>
 							</div>
