Add pulse wave, reduce tremolo depth resolution, fix  volume normalization for panned channels, etc.

--- a/index.html
+++ b/index.html
@@ -452,42 +452,46 @@
 									</label>
 									<label class="btn btn-dark rounded-0 w-100 btn-led">
 										<input type="radio" name="op$-waveform" value="10">
-										Square 1+2
+										Pulse 25%
 									</label>
 									<label class="btn btn-dark rounded-0 w-100 btn-led">
 										<input type="radio" name="op$-waveform" value="11">
-										Triangle 1+2
+										Square 1+2
 									</label>
 									<label class="btn btn-dark rounded-0 w-100 btn-led">
 										<input type="radio" name="op$-waveform" value="12">
-										Sine 1+2+3+4
+										Triangle 1+2
 									</label>
 									<label class="btn btn-dark rounded-0 w-100 btn-led">
 										<input type="radio" name="op$-waveform" value="13">
-										Sine 1+2
+										Sine 1+2+3+4
 									</label>
 									<label class="btn btn-dark rounded-0 w-100 btn-led">
 										<input type="radio" name="op$-waveform" value="14">
-										Sine 1+3
+										Sine 1+2
 									</label>
 									<label class="btn btn-dark rounded-0 w-100 btn-led">
 										<input type="radio" name="op$-waveform" value="15">
-										Sine 1+4
+										Sine 1+3
 									</label>
 									<label class="btn btn-dark rounded-0 w-100 btn-led">
 										<input type="radio" name="op$-waveform" value="16">
-										Sine 1+5
+										Sine 1+4
 									</label>
 									<label class="btn btn-dark rounded-0 w-100 btn-led">
 										<input type="radio" name="op$-waveform" value="17">
-										Sine 1+6
+										Sine 1+5
 									</label>
 									<label class="btn btn-dark rounded-0 w-100 btn-led">
 										<input type="radio" name="op$-waveform" value="18">
-										Sine 1+7
+										Sine 1+6
 									</label>
 									<label class="btn btn-dark rounded-0 w-100 btn-led">
 										<input type="radio" name="op$-waveform" value="19">
+										Sine 1+7
+									</label>
+									<label class="btn btn-dark rounded-0 w-100 btn-led">
+										<input type="radio" name="op$-waveform" value="20">
 										Sine 1+8
 									</label>
 								</div>
