--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
 					</div>
 				</fieldset>
 				<fieldset class="panel">
-					<h1>Volume Envelope</h1>
+					<h1>Envelope</h1>
 					<div class="row form-group">
 						<div class="d-none d-md-block col-3"></div>
 						<div class="col-12 col-md-6 text-center" style="padding: 7px; background: black; border-radius: 4px">
